# bmp-converter

./: CMakeLists.txt  README.md
src/: main.cpp
src/BmpConverter/: BmpConverter.cpp  BmpConverter.hpp
src/BmpImage/: BmpImage.hpp
